--- a/assets/scss/pages/_book.scss
+++ b/assets/scss/pages/_book.scss
@@ -330,7 +330,7 @@
                         &:last-child {
                             margin-right: 0;
                         }
-                        &.on {
+                        &.active {
                             border-color: #EA5504;
                             color:#EA5504;
                         }
