--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -9,9 +9,9 @@ $color_gray2 : #666;
 $color_gray3 : #c4c4c4;
 $color_gray4 : #ececec;
 
-$color_puple1 : #713BB9;
-$color_puple2 : #A475FF;
-$color_puple3 : #9255E4;
+$color_purple1 : #713BB9;
+$color_purple2 : #A475FF;
+$color_purple3 : #9255E4;
 
 $color_orange1 : #EA5504;
 $color_orange2 : #FFBA4D;
