--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -742,6 +742,34 @@ main {
         }
     }
 
+    .tbl_p {
+        border-top: 1px solid #999;
+        th,
+        td {
+            font-size: 22px;
+            letter-spacing: -0.03em;
+            border: 1px solid #999;
+            border-top: 0 solid #000;
+            padding:20px 0 20px 30px;
+            text-align: left;
+        }
+        th {
+            background-color: #F4F5F7;
+            font-weight: 500;
+            &:first-child {
+                border-left: 0 solid #000;
+            }
+        }
+        td {
+            &:last-child {
+                border-right: 0 solid #000;
+            }
+            b {
+                color:#EA5504; 
+            }
+        }
+    }
+
     .book_order_list {
         margin: 0;
         li {
