--- a/assets/scss/pages/_myinfo.scss
+++ b/assets/scss/pages/_myinfo.scss
@@ -210,6 +210,10 @@
             text-align: right;
             font-size: 20px;
             margin-bottom: 10px;
+            &.pos {
+                position: absolute;
+                top:0;
+            }
         }
         
         .btn {
@@ -287,6 +291,82 @@
                         }
                     }
                     
+                }
+            }
+        }
+        .test_box {
+            border: 3px solid #999;
+            padding:20px 30px;
+            font-weight: 500;
+            font-size: 22px;
+            letter-spacing: -0.03em;
+            color:#333;
+            i {
+                text-decoration: underline;
+            }
+        }
+
+        .how_online {
+            display: flex;
+            li {
+                background: #F0F1F2;
+                border: 3px solid #999;
+                box-sizing: border-box;
+                border-radius: 8px;
+                margin-right: 50px;
+                position: relative;
+                text-align: center;
+                font-size: 20px;
+                letter-spacing: -0.05em;
+                width: 230px;
+                p {
+                    background-color: #fff;
+                    padding:10px 0;
+                    em {
+                        font-weight: 500;
+                    }
+                }
+
+                b {
+                    display: block;
+                    font-weight: 500;
+                    padding:10px 0;
+                }
+
+                &::after {
+                    display: block;
+                    content: '';
+                    background: url(../img/ico_arrow_online.svg) no-repeat 50%;
+                    width: 50px;
+                    height: 100%;
+                    position: absolute;
+                    top:50%;
+                    right: -53px;
+                    transform: translateY(-50%);
+                }
+                &:last-child {
+                    margin-right: 0;
+                    width: 160px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    &::after {
+                        display: none;
+                    }
+                }
+                &:nth-child(3) {
+                    width: 260px;
+                }
+            }
+        }
+
+        .myinfo_foot {
+            a {
+                display: block;
+                text-align: center;
+                padding:60px 0;
+                img {
+                    width: 150px;
                 }
             }
         }
