--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5227,44 +5227,129 @@ main > .tit {
   background-color: #9255E4;
 }
 
-.result .book_order_list .btn {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  margin-left: 1.38889vw;
-  margin-right: auto;
+.result .award_list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 2.77778vw;
 }
 
-.result .tbl td a {
-  color: #EA5504;
-  text-decoration: underline;
+.result .award_list li:last-child {
+  margin-bottom: 0;
 }
 
-.result .checkbox_wrap {
-  position: absolute;
-  top: -2.77778vw;
-  right: 0;
-  margin-top: 3.33333vw;
-  margin-bottom: 8.33333vw;
+.result .award_list li strong {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 1;
+          flex: 0 0 1;
+  width: 25vw;
+  font-weight: 700;
+  font-size: 4.72222vw;
+  color: #fff;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
-.result .checkbox_wrap label {
+.result .award_list li .gold {
+  background-color: #EA5504;
+}
+
+.result .award_list li .silver {
+  background-color: #FFA24D;
+}
+
+.result .award_list li .bronze {
+  background-color: #666;
+}
+
+.result .award_list li .encouragement {
+  background-color: #999;
+}
+
+.result .award_list li div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  font-size: 4.16667vw;
+  padding: 2.77778vw 0 2.77778vw 5.55556vw;
+  letter-spacing: -0.03em;
+  border: 3px solid #ECECEC;
+  border-left: 0 solid #000;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.result .award_list li div b {
+  font-weight: 500;
+}
+
+.result .result_box {
+  background: #F0F1F2;
+  padding: 8.33333vw 4.16667vw;
+  margin: 0 -4.16667vw;
+  font-size: 4.16667vw;
+  letter-spacing: -0.03em;
+  color: #000;
+}
+
+.result .result_box input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  height: 12.22222vw;
   font-size: 4.16667vw;
-  color: #666;
+  background: #fff;
+  border-radius: 5px;
+  border: 0 solid #000;
+  padding-left: 12.5vw;
+  font-weight: 500;
+  letter-spacing: -0.03em;
+  text-transform: capitalize;
 }
 
-.result .checkbox_wrap label span {
-  margin-left: 1.11111vw;
-  display: inline-block;
-  -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
+.result .result_box input::-webkit-input-placeholder {
+  color: #999;
+}
+
+.result .result_box input:-ms-input-placeholder {
+  color: #999;
+}
+
+.result .result_box input::-ms-input-placeholder {
+  color: #999;
+}
+
+.result .result_box input::placeholder {
+  color: #999;
+}
+
+.result .result_box input + input {
+  margin-top: 2.22222vw;
+}
+
+.result .result_box input.ip_num {
+  background: #fff url(../img/ic-paper.svg) no-repeat 4.72222vw 50%/4.72222vw 5.83333vw;
+}
+
+.result .result_box input.ip_date {
+  background: #fff url(../img/ic-date.svg) no-repeat 4.72222vw 50%/4.44444vw 6.66667vw;
+}
+
+.result .result_box .btn_app {
+  margin-top: 3.88889vw;
 }
 
 @media (min-width: 1030px) {
