--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -50,41 +50,92 @@
             background-color: #9255E4;
         }
     }
-    .book_order_list {
-        .btn {
-            display: inline-flex;
-            margin:0;
-            margin-left: vw(5);
-            margin-right: auto;
-        }
-    }
-    .tbl {
-        td {
-            a {
-                color: #EA5504;
-                text-decoration: underline;
+
+    .award_list {
+        li {
+            display: flex;
+            margin-bottom: vw(10);
+            &:last-child {
+                margin-bottom: 0;
+            }
+            strong {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex:0 0 1;
+                width: vw(90);
+                font-weight: 700;
+                font-size: vw(17);
+                color:#fff;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+            }
+            .gold {
+                background-color: #EA5504;
+            }
+            .silver {
+                background-color: #FFA24D;
+            }
+            .bronze {
+                background-color: #666;
+            }
+            .encouragement {
+                background-color: #999;
+            }
+            div {
+                flex:1;
+                font-size: vw(15);
+                padding:vw(10) 0 vw(10) vw(20);
+                letter-spacing: -0.03em;
+                border: 3px solid #ECECEC;
+                border-left: 0 solid #000;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                b {
+                    font-weight: 500;
+                }
             }
         }
     }
 
-    .checkbox_wrap {
-        position: absolute;
-        top:vw(-10);
-        right:0;
-        margin-top: vw(12);
-        margin-bottom:vw(30);
-        label {
+    .result_box {
+        background: #F0F1F2;
+        padding:vw(30) vw(15);
+        margin:0 vw(-15);
+        font-size: vw(15);
+        letter-spacing: -0.03em;
+        color:#000;
+        input {
             display: flex;
             align-items: center;
+            width: 100%;
+            height: vw(44);
             font-size: vw(15);
-            color:#666;
-            span {
-                margin-left: vw(4);
-                display: inline-block;
-                transform: translateY(-1px);
+            background: #fff;
+            border-radius: 5px;
+            border: 0 solid #000;
+            padding-left: vw(45);
+            font-weight: 500;
+            letter-spacing: -0.03em;
+            text-transform: capitalize;
+            &::placeholder {
+                color:#999;
+            }
+            & + input {
+                margin-top: vw(8);
+            }
+            &.ip_num {
+                background: #fff url(../img/ic-paper.svg) no-repeat vw(17) 50% / vw(17) vw(21);
+            }
+            &.ip_date {
+                background: #fff url(../img/ic-date.svg) no-repeat vw(17) 50% / vw(16) vw(24);
             }
         }
+        .btn_app {
+            margin-top: vw(14);
+        }
     }
+    
 
 }
 
