--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5380,6 +5380,63 @@ main > .tit {
     padding-right: 20px;
     background: url(../img/ico_poly_right_w.svg) no-repeat 100% 50%/8px 14px;
   }
+  .result .award_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .result .award_list li {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  .result .award_list li:nth-child(odd) {
+    margin-right: 30px;
+    width: calc(50% - 30px);
+  }
+  .result .award_list li:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .result .award_list li:last-child {
+    margin-bottom: 0;
+  }
+  .result .award_list li strong {
+    width: 120px;
+    font-size: 21px;
+  }
+  .result .award_list li div {
+    font-size: 20px;
+    padding: 23px 0 23px 28px;
+  }
+  .result .result_box {
+    padding: 60px 0;
+    margin: 0;
+    font-size: 22px;
+    letter-spacing: -0.03em;
+    color: #000;
+  }
+  .result .result_box input {
+    width: 600px;
+    height: 60px;
+    font-size: 22px;
+    padding-left: 50px;
+    margin: 0 auto;
+    font-weight: 400;
+  }
+  .result .result_box input + input {
+    margin-top: 10px;
+  }
+  .result .result_box input.ip_num {
+    background: #fff url(../img/ic-paper.svg) no-repeat 17px 50%/17px 21px;
+  }
+  .result .result_box input.ip_date {
+    background: #fff url(../img/ic-date.svg) no-repeat 17px 50%/16px 24px;
+  }
+  .result .result_box .btn_app {
+    width: 600px;
+    margin-top: 30px;
+  }
 }
 
 body {
