--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -169,6 +169,63 @@
                 background: url(../img/ico_poly_right_w.svg) no-repeat 100% 50% / 8px 14px;
             }
         }
+
+        .award_list {
+            display: flex;
+            flex-wrap: wrap;
+            li {
+                width: 50%;
+                margin-bottom: 20px;
+                &:nth-child(odd) {
+                    margin-right: 30px;
+                    width: calc(50% - 30px);
+                }
+                &:nth-child(3) {
+                    margin-bottom: 0;
+                }
+                &:last-child {
+                    margin-bottom: 0;
+                }
+                strong {
+                    width: 120px;
+                    font-size: 21px;
+                }                
+                div {
+                    font-size: 20px;
+                    padding:23px 0 23px 28px;
+                }
+            }
+        }
+    
+        .result_box {
+            padding:60px 0;
+            margin:0;
+            font-size: 22px;
+            letter-spacing: -0.03em;
+            color:#000;
+            input {
+
+                width: 600px;
+                height: 60px;
+                font-size: 22px;
+                padding-left: 50px;
+                margin:0 auto;      
+                font-weight: 400;          
+                & + input {
+                    margin-top: 10px;
+                }
+                &.ip_num {
+                    background: #fff url(../img/ic-paper.svg) no-repeat 17px 50% / 17px 21px;
+                }
+                &.ip_date {
+                    background: #fff url(../img/ic-date.svg) no-repeat 17px 50% / 16px 24px;
+                }
+            }
+            .btn_app {
+                width: 600px;
+                margin-top: 30px;
+            }
+        }
         
     }
 
