--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1600,7 +1600,7 @@ main > .tit {
 .tbl td {
   vertical-align: middle;
   text-align: center;
-  padding: 2.77778vw 0;
+  padding: 2.77778vw 1.38889vw;
   border-bottom: 1px solid #CACACA;
   border-right: 1px solid #CACACA;
 }
@@ -1611,6 +1611,12 @@ main > .tit {
 
 .tbl td span {
   font-size: 3.88889vw;
+}
+
+.tbl td b {
+  font-size: 4.44444vw;
+  color: #666;
+  font-weight: 500;
 }
 
 .tbl tfoot b {
@@ -1664,6 +1670,7 @@ main > .tit {
 .book_order_list li strong {
   color: #EA5504;
   font-weight: 500;
+  font-size: 5vw;
 }
 
 .layer_pop {
@@ -2089,6 +2096,10 @@ main > .tit {
   .tbl td span {
     font-size: 20px;
   }
+  .tbl td b {
+    font-size: 22px;
+    color: #333;
+  }
   .tbl_p {
     border-top: 1px solid #999;
   }
@@ -2133,6 +2144,9 @@ main > .tit {
         -ms-flex: 1;
             flex: 1;
     padding: 18px 30px;
+  }
+  .book_order_list li strong {
+    font-size: 26px;
   }
   .layer_pop {
     position: fixed;
@@ -3888,7 +3902,7 @@ main > .tit {
   .book .applicant_info .applicant_form li div .btn_cate {
     font-size: 22px;
     height: 40px;
-    padding: 0 10px 4px;
+    padding: 0 10px;
     margin-right: 10px;
   }
   .book .applicant_info .applicant_form li div input {
@@ -3904,9 +3918,10 @@ main > .tit {
     width: 40%;
   }
   .book .applicant_info .applicant_form li div span + input {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 284px;
+            flex: 0 284px;
+    width: 284px;
     margin-left: 2.77778vw;
   }
   .book .shipping_info {
@@ -3951,6 +3966,12 @@ main > .tit {
     width: 40%;
     margin-top: 0;
     margin-left: 7px;
+  }
+  .book .shipping_info .shipping_form li div .pc_300 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 300px;
+            flex: 0 300px;
+    width: 300px;
   }
   .book .btn_wrap {
     display: -webkit-box;
@@ -4067,6 +4088,12 @@ main > .tit {
           box-sizing: border-box;
 }
 
+.app .applicant_info .applicant_form li .category_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .app .applicant_info .applicant_form li > div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4126,7 +4153,7 @@ main > .tit {
 
 .app .applicant_info .applicant_form li > div span + input {
   margin-left: 2.77778vw;
-  width: auto;
+  width: 33.33333vw;
 }
 
 .app .applicant_info .applicant_form li > div span + div {
@@ -4303,6 +4330,20 @@ main > .tit {
 .app .survey_wrap div button.on {
   border-color: #EA5504;
   color: #EA5504;
+}
+
+.app .survey_wrap div input {
+  width: 100%;
+  border: 2px solid #999;
+  margin-top: 2.08333vw;
+  padding: 0 2.77778vw;
+  height: 9.16667vw;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 4.44444vw;
+  font-weight: 500;
+  letter-spacing: -0.03em;
+  color: #777;
 }
 
 .app .tbl {
@@ -4524,8 +4565,11 @@ main > .tit {
   .app .applicant_info .applicant_form li > div .btn_cate {
     font-size: 22px;
     height: 40px;
-    padding: 3px 10px 4px;
+    padding: 0 10px;
     margin-right: 10px;
+  }
+  .app .applicant_info .applicant_form li > div .category_wrap .btn_cate {
+    padding: 0 13px;
   }
   .app .applicant_info .applicant_form li > div input {
     height: 40px;
@@ -4541,7 +4585,7 @@ main > .tit {
   }
   .app .applicant_info .applicant_form li > div span + input {
     margin-left: 10px;
-    width: 294px;
+    width: 292px;
     -webkit-box-flex: 0;
         -ms-flex: none;
             flex: none;
@@ -4594,7 +4638,8 @@ main > .tit {
     margin-left: 7px;
   }
   .app .shipping_info .shipping_form li div select {
-    width: 114px;
+    width: 150px;
+    min-width: 150px;
     background: #fff url(../img/ico_select.svg) no-repeat right 13px top 50%/10px 16px;
     height: 40px;
     padding-left: 10px;
@@ -4620,6 +4665,12 @@ main > .tit {
             transform: translateY(10px);
     margin-left: 10px;
   }
+  .app .shipping_info .shipping_form li .pc_300 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 300px;
+            flex: 0 300px;
+    width: 300px;
+  }
   .app .survey_wrap {
     margin: 0;
     padding: 30px 35px;
@@ -4631,10 +4682,17 @@ main > .tit {
     margin-top: 20px;
   }
   .app .survey_wrap div button {
+    font-weight: 400;
+    height: 40px;
+    padding: 0 18px;
+    font-size: 22px;
+    margin-top: 0;
+  }
+  .app .survey_wrap div input {
     height: 40px;
     padding: 0 22px;
     font-size: 18px;
-    margin-top: 0;
+    margin-top: 20px;
   }
   .app .tbl {
     margin: 0;
@@ -4893,6 +4951,8 @@ main > .tit {
 
 .myinfo .refund_form li div strong {
   color: #EA5504;
+  font-size: 5vw;
+  font-weight: 500;
 }
 
 .myinfo .myinfo_foot a {
@@ -5064,6 +5124,19 @@ main > .tit {
     -webkit-transform: translateY(10px);
             transform: translateY(10px);
     margin-left: 10px;
+  }
+  .myinfo .refund_form li div strong {
+    font-size: 26px;
+  }
+  .myinfo .refund_form li .pc_300 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 300px;
+            flex: 0 300px;
+  }
+  .myinfo .refund_form li .pc_460 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 460px;
+            flex: 0 460px;
   }
   .myinfo .test_box {
     border: 3px solid #999;
