--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -337,7 +337,7 @@ main {
     td {
         vertical-align: middle;
         text-align: center;
-        padding:vw(10) 0;
+        padding:vw(10) vw(5);
         border-bottom: 1px solid #CACACA;
         border-right: 1px solid #CACACA;
         &:last-child {
@@ -345,6 +345,11 @@ main {
         }
         span {
             font-size: vw(14);
+        }
+        b {
+            font-size: vw(16);
+            color:#666;
+            font-weight: 500;
         }
     }
     tfoot {
@@ -382,23 +387,24 @@ main {
         strong {
             color:#EA5504;
             font-weight: 500;
+            font-size: vw(18);
         }
     }
 }
 
 .layer_pop {
-        z-index: 1000;
-        opacity: 0;
-        position: fixed;
-        width: 100%;
-        left: 0;
-        bottom:0;
-        transform: translateY(100%);
-        border-top-right-radius: 16px;
-        border-top-left-radius: 16px;
-        background-color: #fff;
-        transition: transform .3s ease-in-out;
-        padding:0 vw(15);
+    z-index: 1000;
+    opacity: 0;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom:0;
+    transform: translateY(100%);
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+    background-color: #fff;
+    transition: transform .3s ease-in-out;
+    padding:0 vw(15);
     &.open {
         opacity: 1;
         transform: translateY(0);
@@ -655,6 +661,7 @@ main {
             }
         }
     }
+    
     main {
         > .tit {
             display: block;
@@ -739,6 +746,10 @@ main {
             span {
                 font-size: 20px;
             }
+            b {
+                font-size: 22px;
+                color:#333;
+            }
         }
     }
 
@@ -785,6 +796,9 @@ main {
                 flex: 1;
                 padding:18px 30px;
             }
+            strong {
+                font-size: 26px;
+            }            
         }
     }
 
