--- a/assets/scss/pages/_app.scss
+++ b/assets/scss/pages/_app.scss
@@ -66,6 +66,9 @@
                     font-weight: 700;
                     box-sizing: border-box;
                 }
+                .category_wrap {
+                    display: flex;
+                }
                 > div {
                     display: flex;
                     flex-wrap: wrap;
@@ -73,7 +76,8 @@
                     padding:vw(10) vw(15) vw(10) 0;
                     font-size: vw(16);
                     color:#333;
-                    align-items: center;
+                    align-items: center;                    
+                    
                     .btn_cate {
                         border: 2px solid #999;
                         background-color: #fff;
@@ -106,7 +110,7 @@
                     }
                     span + input {
                         margin-left: vw(10);
-                        width: auto;
+                        width:vw(120);
                     }
                     span + div {
                         margin-left: vw(9);
@@ -240,6 +244,18 @@
                     border-color: #EA5504;
                     color:#EA5504;
                 }
+            }
+            input {
+                width: 100%;
+                border: 2px solid #999;
+                margin-top: vw(7.5);
+                padding:0 vw(10);
+                height: vw(33);
+                box-sizing: border-box;
+                font-size: vw(16);
+                font-weight: 500;
+                letter-spacing: -0.03em;
+                color:#777;
             }
         }
     }
@@ -423,8 +439,13 @@
                         .btn_cate {
                             font-size: 22px;
                             height: 40px;
-                            padding:3px 10px 4px;
+                            padding:0 10px;
                             margin-right: 10px;                            
+                        }
+                        .category_wrap {
+                            .btn_cate {
+                                padding:0 13px;
+                            }
                         }
                         input {
                             height: 40px;
@@ -438,7 +459,7 @@
                         }
                         span + input {
                             margin-left: 10px;
-                            width: 294px;
+                            width: 292px;
                             flex: none;
 
                         }
@@ -485,7 +506,8 @@
                         }
                         
                         select {
-                            width: 114px;
+                            width: 150px;
+                            min-width: 150px;
                             background:#fff url(../img/ico_select.svg) no-repeat right 13px top 50% / 10px 16px;
                             height: 40px;
                             padding-left:10px;
@@ -511,6 +533,10 @@
                         }
                         
                     }
+                    .pc_300 {
+                        flex: 0 300px;
+                        width: 300px;
+                    }        
                 }
             }
         }
@@ -523,11 +549,17 @@
             div {
                 margin-top: 20px;
                 button {
-
+                    font-weight: 400;
+                    height: 40px;
+                    padding:0 18px;
+                    font-size: 22px;
+                    margin-top: 0;
+                }
+                input {
                     height: 40px;
                     padding:0 22px;
                     font-size: 18px;
-                    margin-top: 0;
+                    margin-top: 20px;
                 }
             }
         }
