--- a/assets/scss/pages/_app.scss
+++ b/assets/scss/pages/_app.scss
@@ -240,7 +240,7 @@
                 &:nth-child(-n + 4) {
                     margin-top: 0;
                 }
-                &.on {
+                &.active {
                     border-color: #EA5504;
                     color:#EA5504;
                 }
