--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -845,6 +845,7 @@ main {
         b {
             font-size: 22px;
             letter-spacing: -0.03em;
+            font-weight: 500;
         }
         &.certification {
             width: 540px;
