--- a/assets/scss/pages/_app.scss
+++ b/assets/scss/pages/_app.scss
@@ -169,6 +169,7 @@
                         padding-left: vw(7);
                         font-size: vw(16);
                     }
+                    
                     .btn_coupon {
                         height: vw(32);
                         color:#fff;
@@ -178,11 +179,21 @@
                         margin-right: vw(12);
                         font-size: vw(15);
                         font-weight: 700;
-                        & + strong {
+                        & + input {
+                            color:#000;
+                            font-weight: 500;
+                            font-size: vw(18);
+                            background: transparent;
+                            border: 0 solid #000;
+                            width: 50px;
+                            flex: 0 50px;
+                        }
+                        & + input + span {
                             color:#000;
                             font-weight: 500;
                             font-size: vw(18);
                         }
+                        
                         &.on {
                             background-color: #EA5504;
                         }
@@ -519,12 +530,20 @@
                             padding:0 12px;
                             margin-right: 15px;
                             font-size: 21px;
-                            & + strong {
+                            & + input {
                                 font-size: 26px;
                                 display: inline-block;
                                 transform: translateY(2px);
+                                width: 95px;
+                                flex: 0;
+                                text-align: right;
                             }
-                            & + strong + span {
+                            & + input + span {
+                                font-size: 26px;
+                                transform: translateY(4px);
+                                font-weight: 500;
+                            }
+                            & + input + span + span {
                                 font-size: 18px;
                                 color:#777;
                                 transform: translateY(10px);
